LayoutTests:

Reviewed by Darin and David Hyatt.

        - Test for http://bugs.webkit.org/show_bug.cgi?id=12423
          Mixing white-space:pre text with non white-space:pre text does not wrap properly

        * fast/block/basic/white-space-pre-wraps-expected.checksum: Added.
        * fast/block/basic/white-space-pre-wraps-expected.png: Added.
        * fast/block/basic/white-space-pre-wraps-expected.txt: Added.
        * fast/block/basic/white-space-pre-wraps.html: Added.

WebCore:

        Reviewed by Darin and David Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12423
          Mixing white-space:pre text with non white-space:pre text does not wrap properly

        Test: fast/block/basic/white-space-pre-wraps.html

        * rendering/bidi.cpp:
        (WebCore::RenderBlock::findNextLineBreak): Wrap a non-wrapping text run if it
        appears on a line with previous text runs that do wrap.



Canonical link: https://commits.webkit.org/16157@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19206 268f45cc-cd09-0410-ab3c-d52691b4dbfc